# graph-coloring-algorithms

./: CMakeCache.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  generate_cmake.sh  generate_readme.sh  input.txt
.cmake/api/v1/reply/: cache-v2-cbe0a1c3c334a2cf9a4b.json  cmakeFiles-v1-5ddb6546ce5df9e915e5.json  codemodel-v2-bc8f48f12d3616239ad3.json  directory-src.graph_representation-Debug-b6824f425522811396d4.json  index-2025-11-04T03-39-16-0487.json  target-graph-Debug-915a14e77ef3274d4362.json  target-main-Debug-9b2cb785ec069dc65fa2.json  target-utils-Debug-716b8e751b11924f33a1.json
project_graph_coloring_cpp/: CMakeLists.txt  README.md
project_graph_coloring_cpp/src/: main.cpp
project_graph_coloring_cpp/src/algorithms/: CMakeLists.txt
project_graph_coloring_cpp/src/algorithms/backtracking/: Backtracking.cpp  Backtracking.h  BacktrackingSolver.cpp  BacktrackingSolver.h  CMakeLists.txt  Test_BT.cpp
project_graph_coloring_cpp/src/algorithms/constraint_programming/: CMakeLists.txt  CPSolver.cpp  CPSolver.h  CP_Solver.cpp  CP_Solver.h  Test_CP.cpp
project_graph_coloring_cpp/src/algorithms/dsatur/: CMakeLists.txt  DSATURSolver.cpp  DSATURSolver.h
project_graph_coloring_cpp/src/algorithms/greedy/: CMakeLists.txt
project_graph_coloring_cpp/src/algorithms/greedy/dsatur/: DSATURColoring.h  DSAUTURColoring.cpp  TestDSATUR.cpp
project_graph_coloring_cpp/src/algorithms/max_cut_approx/: CMakeLists.txt
project_graph_coloring_cpp/src/algorithms/max_cut_approx/rlf/: RLFColoring.cpp  RLFColoring.h  TestRLF.cpp
project_graph_coloring_cpp/src/algorithms/perfect_graphs/: CMakeLists.txt
project_graph_coloring_cpp/src/algorithms/rlf/: CMakeLists.txt  RLFSolver.cpp  RLFSolver.h
project_graph_coloring_cpp/src/algorithms/simulated_annealing/: CMakeLists.txt  SimulatedAnnealingSolver.cpp  SimulatedAnnealingSolver.h
project_graph_coloring_cpp/src/graph_representation/: CMakeLists.txt  Graph.cpp  Graph.h  GraphGenerator.cpp  GraphGenerator.h  GraphLoader.cpp  GraphLoader.h
project_graph_coloring_cpp/src/utils/: Benchmark.cpp  Benchmark.h  CMakeLists.txt  ComprehensiveAnalyzer.cpp  ComprehensiveAnalyzer.h  GraphGenerator.cpp  GraphGenerator.h  GraphLoader.cpp  GraphLoader.h  TestDataGenerator.cpp  TestDataGenerator.h  TestRunner.cpp  TestRunner.h  utils.h
src/graph_representation/: Makefile  cmake_install.cmake
src/utils/: Makefile  cmake_install.cmake
